--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -68,6 +68,15 @@ body {
 
 /* CUSTOMIZED */
 
+.pt-7r {
+  padding-top: 7rem;
+}
+
+.mx-5 {
+  margin-left: 30%;
+  margin-right: 30%;
+}
+
 .gmap_canvas {overflow:hidden;background:none!important;height:483px;width:915px;}
 .mapouter{position:relative;text-align:right;height:483px;width:915px;}
 
