--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -547,7 +547,8 @@ fieldset {
 
 ol,
 ul {
-  list-style: none;
+  list-style: visible !important;
+
   margin: 0;
   padding: 0;
 }
@@ -3064,7 +3065,7 @@ select {
 }
 
 .pl-4 {
-  padding-left: 1rem;
+  padding-left: 1rem !important;
 }
 
 .pt-6 {
