--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -1,3 +1,4 @@
+@import url("style1.css");
 /*! tailwindcss v2.0.4 | MIT License | https://tailwindcss.com */
 
 /*! modern-normalize v1.0.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
