doctors and about us

--- a/styles/style1.css
+++ b/styles/style1.css
@@ -12,3 +12,10 @@
     /* padding-top: 5%; */
     padding-bottom: 5%;
 }
+
+.sec-padding-2{
+    padding-left: 10%;
+    padding-right: 10%;
+    /* padding-top: 5%; */
+    padding-bottom: 5%;
+}
