--- a/styles/tailwind.css
+++ b/styles/tailwind.css
@@ -788,11 +788,13 @@ video {
   --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
-  --tw-ring-color: #2563eb;
+  /* --tw-ring-color: #2563eb; */
+  --tw-ring-color: #fff;
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
-  border-color: #2563eb;
+  /* border-color: #2563eb; */
+  border-color: #fff;
 }
 
 input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
@@ -849,7 +851,8 @@ select {
           flex-shrink: 0;
   height: 1rem;
   width: 1rem;
-  color: #2563eb;
+  /* color: #2563eb; */
+  color: #fff;
   background-color: #fff;
   border-color: #71717a;
   border-width: 1px;
@@ -872,7 +875,8 @@ select {
   --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
   --tw-ring-offset-width: 2px;
   --tw-ring-offset-color: #fff;
-  --tw-ring-color: #2563eb;
+  /* --tw-ring-color: #2563eb; */
+  --tw-ring-color: #fff;
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
